Backported to Java 17